# zenpatch

./: .gitignore  Cargo.toml  LICENSE  llms.txt  readme.md
src/: apply.rs  error.rs  get_llm_instructions.rs  lib.rs  vfs.rs
src/applier/: backtracking_patcher.rs  mod.rs  state.rs  whitespace_mode.rs
src/data/: action_type.rs  chunk.rs  line_type.rs  mod.rs  patch_action.rs
src/parser/: mod.rs  parser.rs  text_to_patch.rs
src/tests/: large_file_tests.rs  mod.rs  ported_apply_tests.rs
